tests/integration/fixtures/laugh/import/error/순환_import/b.laugh
가져오기 "a.laugh" 별칭 a;
